# MDFlex

./: .gitignore  LICENSE  MANIFEST.in  README.md  build-deb.sh  pyproject.toml  run.py  setup.py
data/: mdflex.desktop
debian/: changelog  control  copyright  mdflex.postinst.debhelper  mdflex.prerm.debhelper  rules
images/: .gitkeep
mdflex_app/: __init__.py  main.py
mdflex_app/icons/: __init__.py
releases/: .gitkeep
