[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdflex"
version = "1.0.0"
description = "A simplistic, modern markdown reader and editor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Redz", email = "redzdev@pm.me"}
]
keywords = ["markdown", "editor", "pyqt6", "document", "text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Editors",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "PyQt6>=6.4.0",
    "PyQt6-WebEngine>=6.4.0",
    "markdown>=3.4.0",
    "Pygments>=2.14.0",
]

[project.urls]
Homepage = "https://github.com/redz/mdflex"
Repository = "https://github.com/redz/mdflex"
Issues = "https://github.com/redz/mdflex/issues"

[project.scripts]
mdflex = "mdflex_app.main:main"

[project.gui-scripts]
mdflex-gui = "mdflex_app.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mdflex_app*"]

[tool.setuptools.package-data]
mdflex_app = ["resources/*"]
